# adventofcode-2025

./: pyproject.toml
day1/: day1.py
day2/: day2.py
day3/: day3_part1.py  day3_part2.py
day4/: day4.py
day5/: day5.py
day6/: day6.py
day7/: day7.py  path_tally_demo.txt
