[project]
name = "adventofcode-2025"
version = "0.1.0"
description = ""
authors = [
    {name = "scottmckenzie",email = "sccmckenzie@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "ruff (>=0.14.8,<0.15.0)",
    "ipython (>=9.8.0,<10.0.0)",
    "pandas-stubs (>=2.3.3,<2.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false